[gd_scene load_steps=11 format=3 uid="uid://brd2ux4grv5qi"]

[ext_resource type="Script" path="res://scenes/start/multiplayer_menu.gd" id="1_3qklk"]
[ext_resource type="ButtonGroup" uid="uid://dhqvjveclwp5c" path="res://other/character_choice_buttons.tres" id="2_7c77o"]

[sub_resource type="Gradient" id="Gradient_13ali"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tkk8f"]
gradient = SubResource("Gradient_13ali")
width = 50
height = 50

[sub_resource type="Gradient" id="Gradient_ycork"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0.509804, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7m0sm"]
gradient = SubResource("Gradient_ycork")
width = 50
height = 50

[sub_resource type="Gradient" id="Gradient_ccvox"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.533333, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8ppba"]
gradient = SubResource("Gradient_ccvox")
width = 50
height = 50

[sub_resource type="Gradient" id="Gradient_q81o6"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 1, 0.517647, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c337k"]
gradient = SubResource("Gradient_q81o6")
width = 50
height = 50

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3qklk")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Cyan" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("2_7c77o")
texture_normal = SubResource("GradientTexture2D_tkk8f")
texture_pressed = SubResource("GradientTexture2D_tkk8f")
texture_hover = SubResource("GradientTexture2D_tkk8f")
texture_disabled = SubResource("GradientTexture2D_tkk8f")
texture_focused = SubResource("GradientTexture2D_tkk8f")

[node name="Orange" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("2_7c77o")
texture_normal = SubResource("GradientTexture2D_7m0sm")
texture_pressed = SubResource("GradientTexture2D_7m0sm")
texture_hover = SubResource("GradientTexture2D_7m0sm")
texture_disabled = SubResource("GradientTexture2D_7m0sm")
texture_focused = SubResource("GradientTexture2D_7m0sm")

[node name="Purple" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("2_7c77o")
texture_normal = SubResource("GradientTexture2D_8ppba")
texture_pressed = SubResource("GradientTexture2D_8ppba")
texture_hover = SubResource("GradientTexture2D_8ppba")
texture_disabled = SubResource("GradientTexture2D_8ppba")
texture_focused = SubResource("GradientTexture2D_8ppba")

[node name="Mint" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = ExtResource("2_7c77o")
texture_normal = SubResource("GradientTexture2D_c337k")
texture_pressed = SubResource("GradientTexture2D_c337k")
texture_hover = SubResource("GradientTexture2D_c337k")
texture_disabled = SubResource("GradientTexture2D_c337k")
texture_focused = SubResource("GradientTexture2D_c337k")

[node name="Host" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Host Game"

[node name="Join" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Join Game"

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
text = "Start Game
"

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
offset_left = -109.0
offset_top = 20.0
offset_right = -84.0
offset_bottom = 45.0
color = Color(0, 0, 0, 1)

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1094.0
offset_top = 555.0
offset_right = 1244.0
offset_bottom = 586.0
placeholder_text = "IP address"
max_length = 15

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cyan" to="." method="_on_cyan_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Orange" to="." method="_on_orange_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Purple" to="." method="_on_purple_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Mint" to="." method="_on_mint_pressed"]
[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
